--- a/KiteJSONValidator.xcodeproj/xcshareddata/xcschemes/KiteJSONResources.xcscheme
+++ b/KiteJSONValidator.xcodeproj/xcshareddata/xcschemes/KiteJSONResources.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -39,6 +39,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "37C8BA18191058D1004D3E23"
+            BuildableName = "KiteJSONValidator.bundle"
+            BlueprintName = "KiteJSONResources"
+            ReferencedContainer = "container:KiteJSONValidator.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
