--- a/KiteJSONValidator.xcodeproj/xcshareddata/xcschemes/KiteJSONValidatorTests.xcscheme
+++ b/KiteJSONValidator.xcodeproj/xcshareddata/xcschemes/KiteJSONValidatorTests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0610"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -63,6 +63,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "67B6B119188C331200E1630A"
+            BuildableName = "KiteJSONValidatorTests.xctest"
+            BlueprintName = "KiteJSONValidatorTests"
+            ReferencedContainer = "container:KiteJSONValidator.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
