--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
+osx_image: xcode9.2
 language: objective-c
 before_script:
     - export LANG=en_US.UTF-8
 script:
-    - set -o pipefail && xcodebuild clean test -project KiteJSONValidator.xcodeproj -scheme KiteJSONValidatorTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+    - set -o pipefail && xcodebuild clean test -project KiteJSONValidator.xcodeproj -scheme KiteJSONValidatorTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6,OS=11.2' ONLY_ACTIVE_ARCH=NO | xcpretty
